@@ -1,5 +1,6 @@
 --Version 0.6.5
 1.代码优化.
+2.在IQuery中添加对某些field的查询，此类查询先不走缓存(Done)
 
 --Version 0.6.4
 1.每个数据实体的分片信息在进程启动时写入zookeeper中(Done)
@@ -11,7 +12,7 @@
   5.2.update()
   5.3.saveOrUpdate()
   5.4.remove()
-6.在IQuery中添加对某些field的查询，此类查询先不走缓存(TODO)
+
 
 --Version 0.6.3
 1.去除了ISharingEntity和IGlobalEntity接口，改为使用注解代替
